--- a/Lab03-sqlite-patent.ipynb
+++ b/Lab03-sqlite-patent.ipynb
@@ -50,10 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "152fb4fe-f124-417c-aded-5e0c2bb92126",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make: Nothing to be done for 'all'.\n",
+      "-rw-r--r-- 1 jovyan users 647274496 Jan 27 18:40 patents.sq3\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "make\n",
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fa55784a-c01e-403b-97b9-be8cbec4c058",
    "metadata": {},
    "outputs": [],
@@ -95,10 +104,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4ba2bff0-bda6-4bf1-a9db-fa989cd28d43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///patents.sq3\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>PATENT</th>\n",
+       "            <th>GYEAR</th>\n",
+       "            <th>GDATE</th>\n",
+       "            <th>APPYEAR</th>\n",
+       "            <th>COUNTRY</th>\n",
+       "            <th>POSTATE</th>\n",
+       "            <th>ASSIGNEE</th>\n",
+       "            <th>ASSCODE</th>\n",
+       "            <th>CLAIMS</th>\n",
+       "            <th>NCLASS</th>\n",
+       "            <th>CAT</th>\n",
+       "            <th>SUBCAT</th>\n",
+       "            <th>CMADE</th>\n",
+       "            <th>CRECEIVE</th>\n",
+       "            <th>RATIOCIT</th>\n",
+       "            <th>GENERAL</th>\n",
+       "            <th>ORIGINAL</th>\n",
+       "            <th>FWDAPLAG</th>\n",
+       "            <th>BCKGTLAG</th>\n",
+       "            <th>SELFCTUB</th>\n",
+       "            <th>SELFCTLB</th>\n",
+       "            <th>SECDUPBD</th>\n",
+       "            <th>SECDLWBD</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3070801</td>\n",
+       "            <td>1963</td>\n",
+       "            <td>1096</td>\n",
+       "            <td></td>\n",
+       "            <td>BE</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>269</td>\n",
+       "            <td>6</td>\n",
+       "            <td>69</td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3070802</td>\n",
+       "            <td>1963</td>\n",
+       "            <td>1096</td>\n",
+       "            <td></td>\n",
+       "            <td>US</td>\n",
+       "            <td>TX</td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>2</td>\n",
+       "            <td>6</td>\n",
+       "            <td>63</td>\n",
+       "            <td></td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3070803</td>\n",
+       "            <td>1963</td>\n",
+       "            <td>1096</td>\n",
+       "            <td></td>\n",
+       "            <td>US</td>\n",
+       "            <td>IL</td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>2</td>\n",
+       "            <td>6</td>\n",
+       "            <td>63</td>\n",
+       "            <td></td>\n",
+       "            <td>9</td>\n",
+       "            <td></td>\n",
+       "            <td>0.3704</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3070804</td>\n",
+       "            <td>1963</td>\n",
+       "            <td>1096</td>\n",
+       "            <td></td>\n",
+       "            <td>US</td>\n",
+       "            <td>OH</td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>2</td>\n",
+       "            <td>6</td>\n",
+       "            <td>63</td>\n",
+       "            <td></td>\n",
+       "            <td>3</td>\n",
+       "            <td></td>\n",
+       "            <td>0.6667</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3070805</td>\n",
+       "            <td>1963</td>\n",
+       "            <td>1096</td>\n",
+       "            <td></td>\n",
+       "            <td>US</td>\n",
+       "            <td>CA</td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>2</td>\n",
+       "            <td>6</td>\n",
+       "            <td>63</td>\n",
+       "            <td></td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('3070801', '1963', '1096', '', 'BE', '', '', '1', '', '269', '6', '69', '', '1', '', '0', '', '', '', '', '', '', ''),\n",
+       " ('3070802', '1963', '1096', '', 'US', 'TX', '', '1', '', '2', '6', '63', '', '0', '', '', '', '', '', '', '', '', ''),\n",
+       " ('3070803', '1963', '1096', '', 'US', 'IL', '', '1', '', '2', '6', '63', '', '9', '', '0.3704', '', '', '', '', '', '', ''),\n",
+       " ('3070804', '1963', '1096', '', 'US', 'OH', '', '1', '', '2', '6', '63', '', '3', '', '0.6667', '', '', '', '', '', '', ''),\n",
+       " ('3070805', '1963', '1096', '', 'US', 'CA', '', '1', '', '2', '6', '63', '', '1', '', '0', '', '', '', '', '', '', '')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "select * from patents limit 5;"
@@ -106,10 +296,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c00b1f9c-b477-44a5-9967-0d54435146a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///patents.sq3\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>CITING</th>\n",
+       "            <th>CITED</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3858241</td>\n",
+       "            <td>956203</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3858241</td>\n",
+       "            <td>1324234</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3858241</td>\n",
+       "            <td>3398406</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3858241</td>\n",
+       "            <td>3557384</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3858241</td>\n",
+       "            <td>3634889</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('3858241', '956203'),\n",
+       " ('3858241', '1324234'),\n",
+       " ('3858241', '3398406'),\n",
+       " ('3858241', '3557384'),\n",
+       " ('3858241', '3634889')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "select * from citations limit 5;"
@@ -138,10 +383,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bafd64ef-c332-4095-88d8-75e79a020256",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///patents.sq3\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>CITED</th>\n",
+       "            <th>CITED_POSTATE</th>\n",
+       "            <th>CITING</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3398406</td>\n",
+       "            <td>FL</td>\n",
+       "            <td>3858241</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3557384</td>\n",
+       "            <td>MA</td>\n",
+       "            <td>3858241</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3634889</td>\n",
+       "            <td>OH</td>\n",
+       "            <td>3858241</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3319261</td>\n",
+       "            <td>OH</td>\n",
+       "            <td>3858242</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3668705</td>\n",
+       "            <td>WI</td>\n",
+       "            <td>3858242</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('3398406', 'FL', '3858241'),\n",
+       " ('3557384', 'MA', '3858241'),\n",
+       " ('3634889', 'OH', '3858241'),\n",
+       " ('3319261', 'OH', '3858242'),\n",
+       " ('3668705', 'WI', '3858242')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT CITED, patents.POSTATE as CITED_POSTATE, CITING\n",
@@ -169,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2717ea88-bdfe-4acb-8e02-644f0ebb215d",
    "metadata": {},
    "outputs": [],
@@ -181,6 +487,52 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2cb6e042-933c-4de8-af6f-026dfa89f34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///patents.sq3\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT p.*, COALESCE(co_state_counts.co_state_citations, 0) as co_state_citations\n",
+    "FROM patents p\n",
+    "LEFT JOIN (\n",
+    "    SELECT \n",
+    "        c.CITING,\n",
+    "        COUNT(*) as co_state_citations\n",
+    "    FROM citations c\n",
+    "    JOIN patents cited_p ON c.CITED = cited_p.PATENT\n",
+    "    JOIN patents citing_p ON c.CITING = citing_p.PATENT\n",
+    "    WHERE cited_p.POSTATE = citing_p.POSTATE\n",
+    "      AND cited_p.POSTATE IS NOT NULL\n",
+    "      AND citing_p.POSTATE IS NOT NULL\n",
+    "    GROUP BY c.CITING\n",
+    ") co_state_counts ON p.PATENT = co_state_counts.CITING\n",
+    "ORDER BY co_state_citations DESC;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "682f3703-bb59-41e2-894c-292b20a18384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT CITED, patents.POSTATE as CITED_POSTATE, CITING\n",
+    "FROM citations JOIN patents\n",
+    "WHERE CITED==PATENT limit 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e722837-bd6b-4a06-9fda-7a886b6b00d1",
    "metadata": {},
    "outputs": [],
    "source": []
