--- a/Lab03-sqlite-patent.ipynb
+++ b/Lab03-sqlite-patent.ipynb
@@ -513,34 +513,14 @@
     "      AND citing_p.POSTATE IS NOT NULL\n",
     "    GROUP BY c.CITING\n",
     ") co_state_counts ON p.PATENT = co_state_counts.CITING\n",
-    "ORDER BY co_state_citations DESC;"
+    "ORDER BY co_state_citations DESC;\n",
+    "LIMIT 13;"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "682f3703-bb59-41e2-894c-292b20a18384",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT CITED, patents.POSTATE as CITED_POSTATE, CITING\n",
-    "FROM citations JOIN patents\n",
-    "WHERE CITED==PATENT limit 5;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e722837-bd6b-4a06-9fda-7a886b6b00d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -554,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
