--- a/Lab03-sqlite-patent.ipynb
+++ b/Lab03-sqlite-patent.ipynb
@@ -59,7 +59,7 @@
      "output_type": "stream",
      "text": [
       "make: Nothing to be done for 'all'.\n",
-      "-rw-r--r-- 1 jovyan users 647274496 Jan 27 18:40 patents.sq3\n"
+      "-rw-r--r-- 1 jovyan users 647274496 Jan 29 00:33 patents.sq3\n"
      ]
     }
    ],
@@ -476,25 +476,410 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2717ea88-bdfe-4acb-8e02-644f0ebb215d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your solution should be in the last cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cb6e042-933c-4de8-af6f-026dfa89f34c",
+   "id": "df4b25ba-76e1-4161-8100-ffb676f26f10",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * sqlite:///patents.sq3\n"
+      " * sqlite:///patents.sq3\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>PATENT</th>\n",
+       "            <th>GYEAR</th>\n",
+       "            <th>GDATE</th>\n",
+       "            <th>APPYEAR</th>\n",
+       "            <th>COUNTRY</th>\n",
+       "            <th>POSTATE</th>\n",
+       "            <th>ASSIGNEE</th>\n",
+       "            <th>ASSCODE</th>\n",
+       "            <th>CLAIMS</th>\n",
+       "            <th>NCLASS</th>\n",
+       "            <th>CAT</th>\n",
+       "            <th>SUBCAT</th>\n",
+       "            <th>CMADE</th>\n",
+       "            <th>CRECEIVE</th>\n",
+       "            <th>RATIOCIT</th>\n",
+       "            <th>GENERAL</th>\n",
+       "            <th>ORIGINAL</th>\n",
+       "            <th>FWDAPLAG</th>\n",
+       "            <th>BCKGTLAG</th>\n",
+       "            <th>SELFCTUB</th>\n",
+       "            <th>SELFCTLB</th>\n",
+       "            <th>SECDUPBD</th>\n",
+       "            <th>SECDLWBD</th>\n",
+       "            <th>co_state_citations</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>5849155</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>14228</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DK</td>\n",
+       "            <td></td>\n",
+       "            <td>739671</td>\n",
+       "            <td>2</td>\n",
+       "            <td>18</td>\n",
+       "            <td>162</td>\n",
+       "            <td>1</td>\n",
+       "            <td>19</td>\n",
+       "            <td>362</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0.9033</td>\n",
+       "            <td></td>\n",
+       "            <td>0.8665</td>\n",
+       "            <td></td>\n",
+       "            <td>16.8287</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td>161</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5711024</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13899</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>12</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>0.6718</td>\n",
+       "            <td>1.5</td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>153</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5694321</td>\n",
+       "            <td>1997</td>\n",
+       "            <td>13850</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>14</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>4</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0.375</td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td>2</td>\n",
+       "            <td>5.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5710704</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13899</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>8</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>0</td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td></td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5710705</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13899</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>17</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5711023</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13899</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>13</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td>1.5</td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5711025</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13899</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>22</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>0</td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td></td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5732377</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13962</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>19</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td>2</td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5732379</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13962</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>25</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td>2</td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5774821</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>14060</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>11</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>1</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td>3</td>\n",
+       "            <td>6.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5862503</td>\n",
+       "            <td>1999</td>\n",
+       "            <td>14263</td>\n",
+       "            <td>1997</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td></td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>180</td>\n",
+       "            <td>0</td>\n",
+       "            <td>1</td>\n",
+       "            <td></td>\n",
+       "            <td>0.6688</td>\n",
+       "            <td></td>\n",
+       "            <td>7.0611</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td></td>\n",
+       "            <td></td>\n",
+       "            <td>152</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5732378</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13962</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>12</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>179</td>\n",
+       "            <td>1</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0.6651</td>\n",
+       "            <td>2</td>\n",
+       "            <td>6.0615</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>151</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5742507</td>\n",
+       "            <td>1998</td>\n",
+       "            <td>13990</td>\n",
+       "            <td>1995</td>\n",
+       "            <td>DE</td>\n",
+       "            <td></td>\n",
+       "            <td>703976</td>\n",
+       "            <td>3</td>\n",
+       "            <td>13</td>\n",
+       "            <td>701</td>\n",
+       "            <td>2</td>\n",
+       "            <td>22</td>\n",
+       "            <td>179</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>0.6704</td>\n",
+       "            <td>2.5</td>\n",
+       "            <td>6.0782</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>0</td>\n",
+       "            <td>151</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('5849155', '1998', '14228', '1995', 'DK', '', '739671', '2', '18', '162', '1', '19', '362', '0', '0.9033', '', '0.8665', '', '16.8287', '0', '0', '', '', 161),\n",
+       " ('5711024', '1998', '13899', '1995', 'DE', '', '703976', '3', '12', '701', '2', '22', '180', '2', '1', '0.5', '0.6718', '1.5', '6.0611', '0', '0', '0', '0', 153),\n",
+       " ('5694321', '1997', '13850', '1995', 'DE', '', '703976', '3', '14', '701', '2', '22', '180', '4', '1', '0.375', '0.6688', '2', '5.0611', '0', '0', '0', '0', 152),\n",
+       " ('5710704', '1998', '13899', '1995', 'DE', '', '703976', '3', '8', '701', '2', '22', '180', '0', '1', '', '0.6688', '', '6.0611', '0', '0', '', '', 152),\n",
+       " ('5710705', '1998', '13899', '1995', 'DE', '', '703976', '3', '17', '701', '2', '22', '180', '2', '1', '0', '0.6688', '1', '6.0611', '0', '0', '0', '0', 152),\n",
+       " ('5711023', '1998', '13899', '1995', 'DE', '', '703976', '3', '13', '701', '2', '22', '180', '2', '1', '0.5', '0.6688', '1.5', '6.0611', '0', '0', '0', '0', 152),\n",
+       " ('5711025', '1998', '13899', '1995', 'DE', '', '703976', '3', '22', '701', '2', '22', '180', '0', '1', '', '0.6688', '', '6.0611', '0', '0', '', '', 152),\n",
+       " ('5732377', '1998', '13962', '1995', 'DE', '', '703976', '3', '19', '701', '2', '22', '180', '2', '1', '0', '0.6688', '2', '6.0611', '0', '0', '0', '0', 152),\n",
+       " ('5732379', '1998', '13962', '1995', 'DE', '', '703976', '3', '25', '701', '2', '22', '180', '2', '1', '0.5', '0.6688', '2', '6.0611', '0', '0', '0', '0', 152),\n",
+       " ('5774821', '1998', '14060', '1995', 'DE', '', '703976', '3', '11', '701', '2', '22', '180', '1', '1', '0', '0.6688', '3', '6.0611', '0', '0', '0', '0', 152),\n",
+       " ('5862503', '1999', '14263', '1997', 'DE', '', '703976', '3', '', '701', '2', '22', '180', '0', '1', '', '0.6688', '', '7.0611', '0', '0', '', '', 152),\n",
+       " ('5732378', '1998', '13962', '1995', 'DE', '', '703976', '3', '12', '701', '2', '22', '179', '1', '1', '0', '0.6651', '2', '6.0615', '0', '0', '0', '0', 151),\n",
+       " ('5742507', '1998', '13990', '1995', 'DE', '', '703976', '3', '13', '701', '2', '22', '179', '2', '1', '0.5', '0.6704', '2.5', '6.0782', '0', '0', '0', '0', 151)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -513,14 +898,14 @@
     "      AND citing_p.POSTATE IS NOT NULL\n",
     "    GROUP BY c.CITING\n",
     ") co_state_counts ON p.PATENT = co_state_counts.CITING\n",
-    "ORDER BY co_state_citations DESC;\n",
+    "ORDER BY co_state_citations DESC\n",
     "LIMIT 13;"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -534,7 +919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
